--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
             <p id="input-text">Username</p>
             <input type="text" class="input-area" id="user">
             <p id="input-text">Password</p>
-            <input type="text" class="input-area" id="password">
+            <input type="password" class="input-area" id="password">
             <p id="pass-f">Forgot your password?</p>
             <div class="id-bot">
             <button id="btn-login" onclick="login()">LOGIN</button>
