--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <a>About us</a>
         </div>
         <div class="icons">
-        <a href="./html/index2.html"><img src="./html/pics/house-solid.svg" id="icon"></a>
-        <a href="./html/cart.html"><img src="./html/pics/cart-shopping-solid.svg" id="icon"></a>
-        <a href="./html/Profilepage.html"><img src="./html/pics/user-solid.svg" id="icon"></a>
+        <a href=""><img src="./html/pics/house-solid.svg" id="icon"></a>
+        <a href=""><img src="./html/pics/cart-shopping-solid.svg" id="icon"></a>
+        <a href=""><img src="./html/pics/user-solid.svg" id="icon"></a>
         </div>
         
     </nav>
